# OpenApi_Automation

./: .editorconfig  .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
config/: env.yaml  openapi_sources.yaml
data/: test_data.yaml
data/openapi/: apifox_latest.json  apifox_raw.json  apifox_snapshot.json
data/test_data/: common.yaml  files.yaml  test_asr.yaml  test_speaker_classify.yaml  test_subtitle_erase.yaml  test_timbre_design.yaml  test_video_compose.yaml  test_videots.yaml  test_voice_clone.yaml  test_voice_infer.yaml  test_voice_separate.yaml
reports/: report.html
reports/allure-report/: index.html
reports/allure-results/: 0062c481-32cc-4f1a-9150-18cfc61dea86-container.json  010cea09-f066-46d8-a62d-b96801069b2f-container.json  015bcfbe-c949-47b9-b1a8-cde991e37d07-result.json  022493b4-207c-45cc-9979-09148d1815ca-result.json  028e5175-8d8f-43eb-9fcf-03df6dc15517-result.json  02b2b8fa-bb2b-4419-b7e0-0bfe0b92ad6d-container.json  02e9de28-a5df-4f53-b593-ff7572a187d9-result.json  03280579-01fa-4927-8907-25555f2c02e3-container.json  03342cd2-f532-43f4-9198-324289d0df46-result.json  (+948 more)
scripts/: check_openapi_contract.sh  generate_allure_report.ps1  generate_cases_from_openapi.py  install_allure.ps1  run_tests.ps1  run_tests.sh  serve_report.sh  sync_openapi.py  validate_test_data.py
tests/: conftest.py  helpers.py  test_contract_data.py  test_openapi_contract.py  test_speaker_classify.py  test_subtitle_asr_speaker.py  test_timbre_design.py  test_video_compose.py  test_videots.py  test_voice.py  test_voice_separate.py
(+358 files in other folders)
