[project]
name = "shanhai-openapi-automation"
version = "0.1.0"
description = "Production-ready API automation framework for Shanhai Studio OpenAPI."
requires-python = ">=3.10"
dependencies = [
    "allure-pytest>=2.13.5",
    "jsonschema>=4.22.0",
    "pytest>=8.2.0",
    "pytest-html>=4.1.1",
    "PyYAML>=6.0.1",
    "requests>=2.32.0",
]

[tool.pytest.ini_options]
addopts = "-q --strict-markers --html=reports/report.html --self-contained-html --alluredir=reports/allure-results"
testpaths = ["tests"]
markers = [
    "live: tests that call the real Shanhai OpenAPI service",
    "contract: local validation of framework data and case definitions",
    "smoke: core positive-path checks",
    "negative: error, auth, and invalid parameter checks",
    "boundary: boundary value checks",
    "openapi: OpenAPI/Swagger/Apifox contract synchronization checks",
]
